# story_generator

./: .clang-format  .clang-tidy  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  Dockerfile.ros2  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: ISSUE_CLOSE_SUMMARY_TEMPLATE.md  dependabot.yml  label-taxonomy.json  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  task.yml
.github/workflows/: branch-failure-notify.yml  ci.yml  dependabot-autoflow.yml  deploy-pages.yml  issue-intake.yml  meta-audit-notify.yml  pr-gate-notice.yml  pr-labeler.yml  pr-template-check.yml  project-board-sync.yml  wiki-sync.yml
content/: story.md
cpp/: CMakeLists.txt  chapter_metrics.cpp  story_feature_metrics.cpp
cpp/include/: README.md
docker/: api.Dockerfile  ci.Dockerfile  web.Dockerfile
docs/: api.md  architecture.md  architecture_diagrams.md  bug_prevention.md  contracts_registry.md  dependency_charts.md  deployment.md  developer_setup.md  droplet_stack.md  essay_mode.md  feature_pipeline.md  github_collaboration.md  graph_strategy.md  index.md  native_cpp.md  observability.md  python_api_reference.md  qa_evaluation.md  reference_pipeline.md  storage_decision_matrix.md  storage_operations_runbook.md  story_bundle.md  studio.md  wiki_docs.md
docs/adr/: 0000-template.md  0001-repository-guardrails.md  0002-nlp-stack-and-analysis-contract-scaffold.md  0003-pages-static-hosting-and-local-sqlite-api.md  0004-fastapi-backend-react-studio-and-token-auth.md  0005-digitalocean-droplet-and-s3-compatible-storage-plan.md  0006-story-first-feature-extraction-and-schema-enforcement.md  0007-frontend-coverage-gate.md  0008-good-essay-mode-product-surface.md  0009-story-intelligence-pipeline-and-dashboard-read-models.md  0010-docker-local-stack-and-ci-validation.md  0011-brand-icon-system-for-web-and-docs.md  0012-offline-studio-demo-on-github-pages.md  0013-bounded-observability-and-anomaly-retention.md  0014-graph-layout-contract-and-storage-evaluation.md  0015-dark-mode-default-and-toggle.md  0016-native-feature-metrics-acceleration-path.md  0017-story-bundle-binary-format.md  0018-wiki-docs-and-product-first-pages.md  0019-contract-registry-and-pipeline-governance.md  0020-pages-hosted-mkdocs-snapshot.md  0021-pages-hosted-python-api-reference.md  0022-dashboard-png-export-surface.md  0022-dashboard-read-model-v1-endpoints.md  0023-dashboard-read-model-v1-endpoints.md  0024-dashboard-timeline-and-heatmap-export-surfaces.md  0025-dashboard-interaction-and-export-presets.md  0026-storage-adapter-boundary-and-decision-spike.md  0027-pipeline-ingestion-resilience-and-canary.md  0028-qa-evaluation-harness-and-calibration-gates.md  0029-nlp-provider-resilience-and-insight-calibration.md  0030-openapi-snapshot-and-hosted-api-reference.md  0031-keycloak-oidc-auth.md  0032-batch-pipeline-re-zero-benchmark.md  0033-sentence-and-dialogue-extraction-details.md  0034-narrative-essence-extraction-profiles.md  0035-ros2-docker-bringup-and-make-orchestration.md  README.md
docs/assets/: bug_prevention.json
docs/audits/: 2026-02-09-closed-issue-verification.md
docs/javascripts/: mermaid.js
docs/lessons_learned/: re_zero_e2e.md
docs/stylesheets/: story_gen_brand.css
ops/: .env.aws.example  .env.azure.example  .env.example  .env.gcp.example  Caddyfile  README.md  docker-compose.aws.yml  docker-compose.azure.yml  docker-compose.droplet.yml  docker-compose.gcp.yml
scripts/: README.md  build_story_site.py  pre_push_checks.py  reference_story_pipeline.py  ros2_smoke.sh  ros2_stack.sh
src/story_gen/: __init__.py  cli.py  pre_push_checks.py  reference_pipeline.py  site_builder.py  story_collector.py  youtube_downloader.py
templates/agent-kickstart/: AGENTS.md.template  README.md  SYSTEM_PROMPT.txt
tests/: test_api_app.py  test_api_contracts.py  test_bug_prevention_log.py  test_check_contract_drift.py  test_cli_entrypoints.py  test_close_issue.py  test_contract_registry.py  test_dialogue_extraction.py  test_e2e_stack.py  test_essay_quality.py  test_essence_extraction.py  test_extraction_and_beat_metrics.py  test_import_boundaries.py  test_issue_body_hygiene.py  test_label_taxonomy_audit.py  test_language_translation_resilience.py  test_models.py  test_native_feature_metrics.py  test_native_smoke.py  test_pipeline_batch.py  test_pipeline_evaluation_harness.py  test_pre_push_checks.py  test_project_board_audit.py  test_project_contracts.py  test_python_interface.py  test_quality_evaluation_insight_consistency.py  test_reference_pipeline.py  test_site_build.py  test_sqlite_anomaly_store.py  test_sqlite_essay_store.py  test_sqlite_feature_store.py  test_sqlite_ingestion_store.py  test_sqlite_story_analysis_store.py  test_sqlite_story_store.py  test_story_analysis_pipeline.py  test_story_analysis_store_factory.py  test_story_bundle.py  test_story_collector.py  test_story_feature_pipeline.py  test_story_intelligence_foundation.py  (+4 more)
tests/fixtures/: non_english_translation_corpus.v1.json  pipeline_canary_variants.v1.json  story_analysis_v1_golden.json  story_pipeline_eval_fixtures.v1.json
tools/: __init__.py  bug_prevention_log.py  build_python_api_docs.py  check_contract_drift.py  check_imports.py  close_issue.py  dev_stack.py  export_contract_registry.py  export_openapi_snapshot.py  generate_brand_icons.py  issue_body_hygiene.py  label_taxonomy_audit.py  pr_flow.py  project_board_audit.py  project_board_sync.py  run_dev_tool.py  storage_decision_benchmark.py  sync_wiki.py
web/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
web/public/: site.webmanifest
web/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  blueprint_form.test.ts  blueprint_form.ts  demo_mode.ts  main.tsx  offline_demo.tsx  styles.css  theme.ts  types.ts
work/: .gitignore  README.md
work/contracts/: A_corpus_hygiene.json  B_theme_motif.json  C_voice_fingerprint.json  (+7 more)
(+73 files in other folders)
