[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "story_gen"
version = "0.1.0"
description = "Story generation toolkit with software engineering guardrails."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "httpx>=0.28.1",
]

[project.scripts]
story-gen = "story_gen.cli:main"
story-reference = "story_gen.cli.reference:main"
story-collect = "story_gen.cli.collect:main"
story-video = "story_gen.cli.video:main"

[dependency-groups]
dev = [
  "pre-commit>=4.1.0",
  "mypy>=1.14.0",
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0",
  "ruff>=0.9.6",
  "types-beautifulsoup4>=4.12.0.20250516",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
addopts = "-q --cov=story_gen --cov-report=term-missing --cov-fail-under=80"
pythonpath = ["src"]

[tool.coverage.run]
source = ["story_gen"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["bs4.*"]
ignore_missing_imports = true
