[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "story_gen"
version = "0.1.0"
description = "Story generation toolkit with software engineering guardrails."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "fastapi>=0.116.1",
  "httpx>=0.28.1",
  "pydantic>=2.11.7",
  "uvicorn>=0.35.0",
]

[project.scripts]
story-gen = "story_gen.cli:main"
story-reference = "story_gen.cli.reference_pipeline:main"
story-collect = "story_gen.cli.story_collector:main"
story-video = "story_gen.cli.youtube_downloader:main"
story-api = "story_gen.cli.api:main"

[dependency-groups]
dev = [
  "clang-format>=20.1.0",
  "pre-commit>=4.1.0",
  "mypy>=1.14.0",
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.6.19",
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0",
  "ruff>=0.9.6",
  "types-beautifulsoup4>=4.12.0.20250516",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
addopts = "-q --cov=story_gen --cov-report=term-missing --cov-fail-under=80"
pythonpath = ["src"]

[tool.coverage.run]
source = ["story_gen"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["bs4.*"]
ignore_missing_imports = true
