[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "story_gen"
version = "0.1.0"
description = "Story generation toolkit with software engineering guardrails."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "fastapi>=0.116.1",
  "httpx>=0.28.1",
  "pydantic>=2.11.7",
  "uvicorn>=0.35.0",
]

[project.scripts]
story-gen = "story_gen.cli:main"
story-reference = "story_gen.cli.reference_pipeline:main"
story-collect = "story_gen.cli.story_collector:main"
story-video = "story_gen.cli.youtube_downloader:main"
story-api = "story_gen.cli.api:main"
story-blueprint = "story_gen.cli.blueprint:main"
story-features = "story_gen.cli.features:main"
story-dashboard-export = "story_gen.cli.dashboard_export:main"
story-pipeline-canary = "story_gen.cli.pipeline_canary:main"
story-qa-eval = "story_gen.cli.qa_evaluation:main"

[dependency-groups]
dev = [
  "clang-format>=20.1.0",
  "pdoc>=15.0.4",
  "pre-commit>=4.1.0",
  "mypy>=1.14.0",
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.6.19",
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0",
  "ruff>=0.9.6",
  "types-beautifulsoup4>=4.12.0.20250516",
]
nlp = [
  "networkx>=3.4.0",
  "sentence-transformers>=3.0.0",
  "spacy>=3.8.0",
]
topic = [
  "bertopic>=0.16.0",
  "hdbscan>=0.8.33",
  "umap-learn>=0.5.7",
]
advanced = [
  "stanza>=1.8.0",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
addopts = "-q --cov=story_gen --cov-report=term-missing --cov-fail-under=80"
pythonpath = ["src"]

[tool.coverage.run]
source = ["story_gen"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["bs4.*"]
ignore_missing_imports = true
